Revision history for perl distribution Mojolicious-Plugin-AssetPack

2.00 Not Released
 - load_module() confess on error
 - Removed EXPERIMENTAL Reloader pipe

1.47 2017-10-14T18:58:55+0200
 - Dropping "original" from assetpack.db

1.46 2017-09-27T21:35:33+0200
 - Add "asset_class" attribute to AssetPack::Store
 - Add rollupjs pipe - https://rollupjs.org/

1.45 2017-06-19T23:49:30+0200
 - Add Developing guide
 - Removed deprecated method end_range() from AssetPack::Asset
 - Removed deprecated method get_chunk() from AssetPack::Asset
 - Removed deprecated method is_range() from AssetPack::Asset
 - Removed deprecated method mtime() from AssetPack::Asset
 - Removed deprecated method start_range() from AssetPack::Asset
 - Removed deprecated method tag_helper() from AssetPack::Asset
 - Removed MOJO_ASSETPACK_CLEANUP (only used in test suite)
 - Can prevent AssetPack::Store from writing assetpack.db while developing
   with MOJO_ASSETPACK_LAZY=1 (EXPERIMENTAL)

1.44 2017-05-21T23:02:46+0200
 - Improved documentation #125
   Contributor: William Lindley

1.43 2017-05-12T14:38:02+0200
 - Fix not escaping Vuejs template code
 - Less verbose logging when processing assets

1.42 2017-04-29T14:23:37+0200
 - Fix missing use lib '.' in register.t #124
 - Add fetching of source maps to "Fetch" pipe #117

1.41 2017-03-15T22:09:14+0100
 - Fix bug in @import regex used by Pipe::Sass

1.40 2017-02-05T15:10:58-0800
 - Fix skipping @import in comments #121
 - Improved documentation for assetpack.def and paths #110
 - Can disable Pipe::Reloader from the browser

1.39 2017-01-25T22:39:45+0100
 - Skipping t/sass-source-map.t for now #115
   http://cpantesters.org/cpan/report/c59d94d4-e16e-11e6-ab5a-96809f28caea

1.38 2017-01-23T14:12:31+0100
 - Fix missing path() function in Pipe::Sass

1.37 2017-01-12T20:52:18+0100
 - Add support for sass source maps
 - No need to delete known media types in AssetPack::Store

1.36 2017-01-11T11:18:45+0100
 - Fix bug in Fetch pipe, fixing t/font-awesome.t